--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,21 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
+
+#homelink {
+    position: absolute;
+    top: 1.5em;
+    right: 1.5em;
+    text-align: right;
+    font-size: 1.2em;
+    font-weight: 550;
+    color: white;
+    border-radius: 5px;
+    border: 1px solid white;
+    padding: 0.5em;
+    line-height: 1em;
+    opacity: 0.5;
+    z-index: 99999;
+  }
+
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -475,7 +492,6 @@ a:hover {
     opacity: 0;
     position: relative;
     text-align: center;
-    top: -1em;
     vertical-align: middle;
     width: 90%;
 }
@@ -483,12 +499,13 @@ a:hover {
 #header h1 {
     font-size: 4.35em;
     font-weight: 900;
-    letter-spacing: -0.035em;
+    letter-spacing: -0.03em;
     line-height: 1em;
 }
 
 #header h2 {
     font-size: 2.5em;
+    letter-spacing: -0.03em;
 }
 
 #header p {
@@ -666,6 +683,11 @@ a:hover {
     body, input, select, textarea {
         font-size: 13pt;
     }
+    #homelink {
+        top: 1.5em;
+        right: 1.5em;
+    }
+
     /* BG */
     @-moz-keyframes bg {
         0% {
@@ -736,6 +758,11 @@ a:hover {
     body, input, select, textarea {
         font-size: 12pt;
     }
+    #homelink {
+        top: 1.5em;
+        right: 1.5em;
+    }
+
     /* BG */
     @-moz-keyframes bg {
         0% {
@@ -809,6 +836,11 @@ a:hover {
     body, input, select, textarea {
         font-size: 11pt;
     }
+    #homelink {
+        top: 1em;
+        right: 1em;
+    }
+
     /* BG */
     @-moz-keyframes bg {
         0% {
@@ -894,6 +926,12 @@ a:hover {
 /* Mobile (Portrait) */
 
 @media screen and (max-width: 480px) {
+    /* Basic */
+    #homelink {
+        top: 0.5em;
+        right: 0.5em;
+    }
+
     /* BG */
     @-moz-keyframes bg {
         0% {
