--- a/css/main.css
+++ b/css/main.css
@@ -542,16 +542,30 @@ a:hover {
     width: 90%;
 }
 
-#header h1 {
+h1 {
     font-size: 4.35em;
     font-weight: 900;
     letter-spacing: -0.03em;
     line-height: 1em;
 }
 
-#header h2 {
-    font-size: 2.5em;
+h2 {
+    font-size: 2.3em;
+    font-weight: 500;
     letter-spacing: -0.03em;
+}
+
+h3 {
+    font-size: 1.6em;
+    font-weight: 400;
+    letter-spacing: -0.03em;
+}
+
+h4 {
+    font-size: 1.4em;
+    font-weight: 400;
+    letter-spacing: -0.03em;
+    margin-top: 0.3em;
 }
 
 #header p {
